--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,23 @@
 {
-    "compilerOptions": {
-        "target": "es2015",
-        "module": "es2015",
-        "skipLibCheck": true,
-        "preserveConstEnums": true,
-        "sourceMap": false,
-        "allowJs": true,
-        "strict": true,
-        "strictNullChecks": false,
-        "strictPropertyInitialization": false,
-        "rootDir": "./webapp",
-        "outDir": "./dist",
-        "baseUrl": "./",
-        "moduleResolution": "node",
-        "typeRoots": [
-            "./node_modules/@types",
-            "./node_modules/@openui5/ts-types-esm"
-        ],
-        "paths": {
-            "com/hse/wcintegration/*": [
-                "./webapp/*"
-            ]
-        }
-    },
-    "include": [
-        "./webapp/**/*"
-    ]
+	"compilerOptions": {
+		"target": "es2015",
+		"module": "es2015",
+		"skipLibCheck": true,
+		"preserveConstEnums": true,
+		"sourceMap": false,
+		"allowJs": true,
+		"strict": true,
+		"strictNullChecks": false,
+		"strictPropertyInitialization": false,
+		"rootDir": "./",
+		"outDir": "./dist",
+		"baseUrl": "./",
+		"moduleResolution": "Node",
+		"typeRoots": ["./node_modules/@types", "./node_modules/@openui5/ts-types-esm"],
+		"paths": {
+			"com/hse/wcintegration/*": ["./webapp/*"],
+			"app/ext_libs/*": ["./lib/*"]
+		}
+	},
+	"include": ["./webapp/**/*", "./lib/**/*"]
 }
