--- a/ui5.yaml
+++ b/ui5.yaml
@@ -17,10 +17,10 @@ builder:
           afterTask: replaceVersion
           configuration: &transpileConfig
               removeConsoleStatements: true
-              transpileAsync: true
+              transpileAsync: false
               transpileTypeScript: true
         - name: ui5-tooling-modules-task
-          afterTask: replaceVersion
+          afterTask: ui5-tooling-transpile-task
 server:
     customMiddleware:
         - name: ui5-middleware-livereload
