--- a/ui5.yaml
+++ b/ui5.yaml
@@ -20,7 +20,7 @@ builder:
               transpileAsync: true
               transpileTypeScript: true
         - name: ui5-tooling-modules-task
-          afterTask: replaceVersion
+          afterTask: ui5-tooling-transpile-task
 server:
     customMiddleware:
         - name: ui5-middleware-livereload
