--- a/ui5-dist.yaml
+++ b/ui5-dist.yaml
@@ -1,16 +1,17 @@
 specVersion: "2.6"
 metadata:
-  name: com.hse.wcintegration
+    name: com.hse.wcintegration
 type: application
 resources:
-  configuration:
-    paths:
-      webapp: dist
+    configuration:
+        paths:
+            webapp: dist
 framework:
-  name: OpenUI5
-  version: "1.108.0"
-  libraries:
-    - name: sap.m
-    - name: sap.ui.core
-    - name: sap.ui.unified
-    - name: themelib_sap_horizon
+    name: OpenUI5
+    version: "1.108.1"
+    libraries:
+        - name: sap.m
+        - name: sap.ui.core
+        - name: sap.ui.unified
+        - name: sap.ui.webc.main
+        - name: themelib_sap_horizon
