--- a/ui5.yaml
+++ b/ui5.yaml
@@ -4,7 +4,7 @@ metadata:
 type: application
 framework:
     name: OpenUI5
-    version: "1.108.0"
+    version: "1.108.1"
     libraries:
         - name: sap.m
         - name: sap.ui.core
@@ -20,7 +20,7 @@ builder:
               transpileAsync: true
               transpileTypeScript: true
         - name: ui5-tooling-modules-task
-          afterTask: replaceVersion
+          afterTask: ui5-tooling-transpile-task
 server:
     customMiddleware:
         - name: ui5-middleware-livereload
