--- a/ui5.yaml
+++ b/ui5.yaml
@@ -21,6 +21,8 @@ builder:
               transpileTypeScript: true
         - name: ui5-tooling-modules-task
           afterTask: ui5-tooling-transpile-task
+          configuration:
+              addToNamespace: true
 server:
     customMiddleware:
         - name: ui5-middleware-livereload
@@ -35,3 +37,5 @@ server:
           configuration: *transpileConfig
         - name: ui5-tooling-modules-middleware
           afterMiddleware: compression
+          configuration:
+              addToNamespace: true
