--- a/ui5.yaml
+++ b/ui5.yaml
@@ -25,17 +25,17 @@ builder:
               addToNamespace: true
 server:
     customMiddleware:
-        - name: ui5-middleware-livereload
+        - name: ui5-tooling-transpile-middleware
           afterMiddleware: compression
+          configuration: *transpileConfig
+        - name: ui5-tooling-modules-middleware
+          afterMiddleware: ui5-tooling-transpile-middleware
+          configuration:
+              addToNamespace: true
+        - name: ui5-middleware-livereload
+          afterMiddleware: ui5-tooling-modules-middleware
           configuration:
               debug: true
               extraExts: "xml,json,properties"
               port: 35729
               path: "webapp"
-        - name: ui5-tooling-transpile-middleware
-          afterMiddleware: compression
-          configuration: *transpileConfig
-        - name: ui5-tooling-modules-middleware
-          afterMiddleware: compression
-          configuration:
-              addToNamespace: true
