--- a/ui5-dist.yaml
+++ b/ui5-dist.yaml
@@ -1,4 +1,4 @@
-specVersion: "2.6"
+specVersion: "3.0"
 metadata:
     name: com.hse.wcintegration
 type: application
@@ -8,10 +8,11 @@ resources:
             webapp: dist
 framework:
     name: OpenUI5
-    version: "1.108.1"
+    version: "1.117.1"
     libraries:
         - name: sap.m
         - name: sap.ui.core
-        - name: sap.ui.unified
-        - name: sap.ui.webc.main
         - name: themelib_sap_horizon
+        - name: sap.ui.unified
+        - name: sap.ui.webc.fiori
+        - name: sap.ui.webc.main  
