--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ui5-tooling-transpile": "^3.0.5"
   },
   "dependencies": {
-    "firebase": "^10.3.0"
+    "firebase": "^10.3.0",
+    "valibot": "^0.11.1"
   }
 }
